--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "dotenv": "^10.0.0",
         "ejs": "~2.6.1",
         "express": "~4.16.1",
+        "googleapis": "^92.0.0",
         "http-errors": "~1.6.3",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^4.1.4",
