--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
         "start": "node ./bin/www"
     },
     "dependencies": {
-        "body-parser": "^1.19.0",
-        "cookie-parser": "~1.4.4",
+        "body-parser": "^1.19.1",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
-        "debug": "~2.6.9",
-        "dotenv": "^10.0.0",
-        "ejs": "~2.6.1",
-        "express": "~4.16.1",
-        "googleapis": "^92.0.0",
-        "http-errors": "1.8.1",
+        "debug": "^4.3.3",
+        "dotenv": "^16.0.0",
+        "ejs": "^3.1.6",
+        "express": "^4.17.2",
+        "googleapis": "^95.0.0",
+        "http-errors": "^2.0.0",
         "jsonwebtoken": "^8.5.1",
-        "mongodb": "^4.1.4",
-        "morgan": "~1.9.1",
-        "nodemailer": "^6.7.0",
-        "rate-limiter-flexible": "^2.3.5"
+        "mongodb": "^4.3.1",
+        "morgan": "^1.10.0",
+        "nodemailer": "^6.7.2",
+        "rate-limiter-flexible": "^2.3.6"
     }
 }
