--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
         "start": "node ./bin/www"
     },
     "dependencies": {
-        "body-parser": "1.19.1",
+        "body-parse": "^0.1.0",
+        "body-parser": "^1.19.2",
         "cookie-parser": "1.4.6",
         "cors": "2.8.5",
         "debug": "4.3.3",
         "dotenv": "16.0.0",
         "ejs": "3.1.6",
-        "express": "4.17.2",
+        "express": "^4.17.3",
         "googleapis": "95.0.0",
         "http-errors": "2.0.0",
         "jsonwebtoken": "8.5.1",
