--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "start": "node ./bin/www"
+        "start": "node ./bin/www",
+        "api": "node ./swagger.js",
+        "dev": "node ./swagger.js --delay 500ms --watch node ./bin/www"
     },
     "dependencies": {
         "body-parse": "0.1.0",
@@ -19,6 +21,9 @@
         "mongodb": "4.4.1",
         "morgan": "1.10.0",
         "nodemailer": "6.7.3",
-        "rate-limiter-flexible": "2.3.6"
+        "rate-limiter-flexible": "2.3.6",
+        "swagger-autogen": "^2.21.0",
+        "swagger-jsdoc": "^6.2.0",
+        "swagger-ui-express": "^4.3.0"
     }
 }
