--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "morgan": "1.10.0",
         "nodemailer": "6.7.3",
         "rate-limiter-flexible": "2.3.6",
+        "request": "^2.88.2",
         "swagger-autogen": "^2.21.0",
         "swagger-jsdoc": "^6.2.0",
         "swagger-ui-express": "^4.3.0"
