--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "hello-cycu-delivery-service"
           heroku_email: "wuilliamolgo104286@gmail.com"
+          branch: "master"
