--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "request": "^2.88.2",
         "swagger-autogen": "2.21.1",
         "swagger-jsdoc": "^6.2.0",
-        "swagger-ui-express": "^4.3.0"
+        "swagger-ui-express": "^4.3.0",
+        "twilio": "^3.80.0"
     }
 }
