--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "api": "node ./swagger.js",
         "dev": "node ./swagger.js --delay 500ms --watch node ./bin/www"
     },
+    "engines": { "node": "14.17.6" },
     "dependencies": {
         "body-parse": "0.1.0",
         "body-parser": "1.20.0",
