--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
         "ejs": "3.1.7",
         "express": "4.17.3",
         "google-auth-library": "^8.0.2",
-        "googleapis": "100.0.0",
+        "googleapis": "^109.0.1",
         "http-errors": "2.0.0",
         "jsonwebtoken": "8.5.1",
         "mongodb": "4.5.0",
         "morgan": "1.10.0",
+        "node-geocoder": "^4.2.0",
         "nodemailer": "6.7.3",
         "rate-limiter-flexible": "2.3.6",
         "request": "^2.88.2",
