--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "node": "14.17.6"
     },
     "dependencies": {
+        "aws-sdk": "^2.1297.0",
         "body-parse": "0.1.0",
         "body-parser": "1.20.0",
         "cookie-parser": "1.4.6",
@@ -24,6 +25,7 @@
         "jsonwebtoken": "8.5.1",
         "mongodb": "4.5.0",
         "morgan": "1.10.0",
+        "multer": "^1.4.5-lts.1",
         "node-geocoder": "^4.2.0",
         "nodemailer": "6.7.3",
         "rate-limiter-flexible": "2.3.6",
