--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "node": "14.17.6"
     },
     "dependencies": {
+        "apple-signin-auth": "^1.7.5",
         "aws-sdk": "^2.1297.0",
         "body-parse": "0.1.0",
         "body-parser": "1.20.0",
